✨ Improve content clarity and professionalism
📝 Content Improvements:
- Enhanced about section with clearer, more natural language
- Improved education formatting with proper punctuation
- Refined work experience descriptions for better readability
- Updated project descriptions to be more concise and professional
- Polished footer text structure

🎯 Changes based on feedback:
- Reduced buzzword-heavy language while keeping technical accuracy
- Maintained terminal aesthetic but improved readability
- Added proper grammar and punctuation throughout
- Made descriptions more conversational and approachable

The terminal theme remains fresh and distinctive while being more accessible to recruiters and employers.

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
                 </div>
                 <div class="output">
                     <p class="description">
-                        Junior CS student at Mississippi State University specializing in AI/ML research,
-                        computer vision, and distributed systems. Currently developing innovative
-                        solutions at NSPARC with expertise in real-time depth estimation and 
-                        cellular network optimization. Actively seeking internships and co-op 
-                        opportunities to apply cutting-edge research in industry settings.
+                        I'm a junior Computer Science major at Mississippi State University, 
+                        specializing in AI/ML research, computer vision, and distributed systems. 
+                        I currently develop solutions at NSPARC, working in real-time depth 
+                        estimation and cellular network optimization. I'm actively seeking 
+                        internships or co-op roles to apply my research in industry.
                     </p>
                 </div>
             </div>
@@ -110,11 +110,10 @@
                     <div class="card-content">
                         <div class="education-item">
                             <h4>Mississippi State University</h4>
-                            <p class="degree">B.S. Computer Science (Junior)</p>
-                            <p class="honors">Shackouls Honors College</p>
-                            <p class="minor">Minor in Statistics</p>
+                            <p class="degree">B.S. in Computer Science (Junior)</p>
+                            <p class="honors">Shackouls Honors College · Minor in Statistics</p>
                             <p class="gpa">GPA: 4.0/4.0</p>
-                            <p class="graduation">Expected: May 2027</p>
+                            <p class="graduation">Expected graduation: May 2027</p>
                         </div>
                     </div>
                 </div>
@@ -211,10 +210,10 @@
                             <p class="company">Mississippi State University</p>
                             <p class="duration">August 2023 - August 2025</p>
                             <ul>
-                                <li>Created monocular depth estimation system using YOLOV11 and RT MonoDepth for real-time construction object analysis</li>
-                                <li>Trained object detection model on 9,000+ cattle feed lots achieving 94% accuracy</li>
-                                <li>Developed Apache Kafka data pipeline for unsupervised learning with F1 score of 0.91</li>
-                                <li>Containerized OAI gNb and UE core files using Docker and Kubernetes</li>
+                                <li>Created monocular depth estimation system using YOLOV11 and RT MonoDepth for real-time object analysis in construction settings</li>
+                                <li>Trained an object detection model on data from over 9,000 cattle feed lots, achieving 94% accuracy</li>
+                                <li>Built an Apache Kafka data pipeline for unsupervised learning, with an F1 score of 0.91</li>
+                                <li>Packaged OAI gNb and UE core files using Docker and Kubernetes</li>
                                 <li>Programmed 20+ OpenAI cellular Non-Real-Time RIC files using C++</li>
                                 <li>Automated mmWave tower beamforming using GNU Radio and Bash scripting</li>
                             </ul>
@@ -254,7 +253,7 @@
                             <span>Flutter</span>
                         </div>
                     </div>
-                    <p>Personal e-reader application with OLED-black theme and Bookerly font for enhanced reading experience.</p>
+                    <p>Personal e-reader app with an OLED black theme and Bookerly font for a premium reading experience.</p>
                     <div class="project-links">
                         <a href="https://github.com/Ashwani564/My-Library" target="_blank">
                             <i class="fab fa-github"></i>
@@ -272,7 +271,7 @@
                             <span>OpenGL</span>
                         </div>
                     </div>
-                    <p>Three-body gravity simulation using OpenGL and GLFW for real-time gravitational effects visualization.</p>
+                    <p>Three-body gravity simulation using OpenGL and GLFW, visualizing real-time gravitational effects.</p>
                     <div class="project-links">
                         <a href="https://github.com/Ashwani564/gravity_simulation" target="_blank">
                             <i class="fab fa-github"></i>
@@ -291,7 +290,7 @@
                             <span>ML</span>
                         </div>
                     </div>
-                    <p>Real-time monocular depth estimation system for construction object analysis using advanced ML models.</p>
+                    <p>Real-time monocular depth estimation for construction object analysis using advanced ML models.</p>
                     <div class="project-links">
                         <a href="https://github.com/Ashwani564/RT-Monodepth-Construction" target="_blank">
                             <i class="fab fa-github"></i>
@@ -420,8 +419,9 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-text">
-                    <p>&copy; 2025 Ash Mishra. All systems operational.</p>
-                    <p>Designed with <span class="heart">♥</span> using retro-futuristic aesthetics</p>
+                    <p>&copy; 2025 Ash Mishra.</p>
+                    <p>All systems operational.</p>
+                    <p>Designed with <span class="heart">♥</span> in a retro-futuristic aesthetic.</p>
                 </div>
                 <div class="footer-social">
                     <a href="https://github.com/Ashwani564" target="_blank"><i class="fab fa-github"></i></a>
