Simplify timeline: Move Purdue below MSU in vertical layout

--- a/index.html
+++ b/index.html
@@ -133,9 +133,13 @@
                         </div>
                     </div>
 
-                    <!-- Aug 2023 - Aug 2025: MSU (left) branching to Purdue (right) -->
-                    <div class="timeline-row msu-row">
-                        <div class="timeline-content-left">
+                    <!-- Aug 2023 - Aug 2025: MSU -->
+                    <div class="timeline-row">
+                        <div class="timeline-date-left">
+                            <span class="timeline-date-text">Aug 2023</span>
+                        </div>
+                        <div class="timeline-node node-lime"></div>
+                        <div class="timeline-content-right">
                             <div class="experience-card msu-card">
                                 <h3>Mississippi State University</h3>
                                 <p class="experience-role">Undergraduate Researcher</p>
@@ -148,9 +152,15 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="timeline-node node-branch"></div>
+                    </div>
+
+                    <!-- Jun 2024 - Aug 2024: Purdue -->
+                    <div class="timeline-row">
+                        <div class="timeline-date-left">
+                            <span class="timeline-date-text">Jun 2024</span>
+                        </div>
+                        <div class="timeline-node"></div>
                         <div class="timeline-content-right">
-                            <!-- Purdue positioned alongside MSU timeline -->
                             <div class="experience-card purdue-card">
                                 <h3>Purdue University</h3>
                                 <p class="experience-role">Summer Research Intern</p>
